# daceiver

./: README.md  daceiver.py  pyproject.toml
daceiver/: DataReceiver.py  __init__.py  daceiver.py
tests/: TestDaceiver.py  __test__.py
